# ja2-1.13-source-mirror

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Console/: CMakeLists.txt
Editor/: CMakeLists.txt
Laptop/: CMakeLists.txt
ModularizedTacticalAI/src/: CMakeLists.txt
Standard Gaming Platform/: CMakeLists.txt
Strategic/: CMakeLists.txt
Tactical/: CMakeLists.txt
TacticalAI/: CMakeLists.txt
TileEngine/: CMakeLists.txt
Utils/: CMakeLists.txt
ext/VFS/: CMakeLists.txt
ext/export/: CMakeLists.txt
ext/libpng/: CMakeLists.txt
ext/zlib/: CMakeLists.txt
lua/: CMakeLists.txt
