add_library(Editor STATIC "Cursor Modes.cpp"
"Editor Callbacks.cpp"
"Editor Modes.cpp"
"Editor Taskbar Creation.cpp"
"Editor Taskbar Utils.cpp"
"Editor Undo.cpp"
"EditorBuildings.cpp"
"EditorItems.cpp"
"EditorMapInfo.cpp"
"EditorMercs.cpp"
"EditorTerrain.cpp"
"Item Statistics.cpp"
"LoadScreen.cpp"
"Road Smoothing.cpp"
"Sector Summary.cpp"
"SmartMethod.cpp"
"Road Smoothing.cpp"
"Smoothing Utils.cpp"
"XML_ActionItems.cpp"
"edit_sys.cpp"
"editscreen.cpp"
"messagebox.cpp"
"newsmooth.cpp"
"popupmenu.cpp"
"selectwin.cpp"
"smooth.cpp")