add_library(SGP STATIC "Button Sound Control.cpp"
"Button System.cpp"
"Compression.cpp"
"Container.cpp"
"Cursor Control.cpp"
"DbMan.cpp"
"Debug.cpp"
"DirectDraw Calls.cpp"
"DirectX Common.cpp"
"English.cpp"
"FileCat.cpp"
"FileMan.cpp"
"Flic.cpp"
"Font.cpp"
"Install.cpp"
"Ja2 Libs.cpp"
"LibraryDataBase.cpp"
"MemMan.cpp"
"Mutex Manager.cpp"
"PCX.cpp"
"PngLoader.cpp"
"Random.cpp"
"RegInst.cpp"
"STCI.cpp"
"WinFont.cpp"
"debug_util.cpp"
"debug_win_util.cpp"
"himage.cpp"
"impTGA.cpp"
"input.cpp"
"line.cpp"
"mousesystem.cpp"
"readdir.cpp"
"sgp.cpp"
"sgp_logger.cpp"
"shading.cpp"
"soundman.cpp"
"stringicmp.cpp"
"timer.cpp"
"video.cpp"
"vobject.cpp"
"vobject_blitters.cpp"
"vsurface.cpp")
target_compile_definitions(SGP PRIVATE NO_ZLIB_COMPRESSION)