add_library(Strategic STATIC "AI Viewer.cpp"
"ASD.cpp"
"Assignments.cpp"
"Auto Resolve.cpp"
"Campaign Init.cpp"
"Creature Spreading.cpp"
"Facilities.cpp"
"Game Clock.cpp"
"Game Event Hook.cpp"
"Game Events.cpp"
"Game Init.cpp"
"Hourly Update.cpp"
"LuaInitNPCs.cpp"
"Luaglobal.cpp"
"Map Screen Helicopter.cpp"
"Map Screen Interface Border.cpp"
"Map Screen Interface Bottom.cpp"
"Map Screen Interface Map Inventory.cpp"
"Map Screen Interface Map.cpp"
"Map Screen Interface TownMine Info.cpp"
"Map Screen Interface.cpp"
"Meanwhile.cpp"
"Merc Contract.cpp"
"MilitiaIndividual.cpp"
"MilitiaSquads.cpp"
"Player Command.cpp"
"PreBattle Interface.cpp"
"Queen Command.cpp"
"Quest Debug System.cpp"
"Quests.cpp"
"Reinforcement.cpp"
"Scheduling.cpp"
"Strategic AI.cpp"
"Strategic Event Handler.cpp"
"Strategic Merc Handler.cpp"
"Strategic Mines LUA.cpp"
"Strategic Mines.cpp"
"Strategic Movement Costs.cpp"
"Strategic Movement.cpp"
"Strategic Pathing.cpp"
"Strategic Status.cpp"
"Strategic Town Loyalty.cpp"
"Strategic Turns.cpp"
"Town Militia.cpp"
"UndergroundInit.cpp"
"XML_Army.cpp"
"XML_Bloodcats.cpp"
"XML_CoolnessBySector.cpp"
"XML_Creatures.cpp"
"XML_ExtraItems.cpp"
"XML_Facilities.cpp"
"XML_FacilityTypes.cpp"
"XML_Minerals.cpp"
"XML_SectorNames.cpp"
"XML_SquadNames.cpp"
"XML_UniformColors.cpp"
"mapscreen.cpp"
"strategic town reputation.cpp"
"strategic.cpp"
"strategicmap.cpp")