add_library(TileEngine STATIC "Ambient Control.cpp"
"Buildings.cpp"
"Exit Grids.cpp"
"Explosion Control.cpp"
"Fog Of War.cpp"
"Interactive Tiles.cpp"
"Isometric Utils.cpp"
"LightEffects.cpp"
"Map Edgepoints.cpp"
"Radar Screen.cpp"
"Render Dirty.cpp"
"Render Fun.cpp"
"Render Z.cpp"
"SaveLoadMap.cpp"
"Shade Table Util.cpp"
"Simple Render Utils.cpp"
"Smell.cpp"
"SmokeEffects.cpp"
"Tactical Placement GUI.cpp"
"Tile Animation.cpp"
"Tile Cache.cpp"
"Tile Surface.cpp"
"TileDat.cpp"
"WorldDat.cpp"
"XML_ExplosionData.cpp"
"environment.cpp"
"lighting.cpp"
"overhead map.cpp"
"phys math.cpp"
"physics.cpp"
"pits.cpp"
"renderworld.cpp"
"structure.cpp"
"sysutil.cpp"
"tiledef.cpp"
"worlddef.cpp"
"worldman.cpp")